refactor(racingcar): 전체 리팩토링 및 도메인 로직 개선 (상수화, 예외처리)
- Domain(Car, Cars): 매직 넘버 상수화, 유효성 검사 로직 수정 (NullPointerException 해결)
- View(Input, Output): 하드코딩 제거 및 에러 메시지 상수화
- Application: 메인 로직을 도메인 객체(Cars)로 위임하여 책임 분리
- Test: 변경된 Cars 생성자 로직에 맞춰 테스트 코드 수정