@@ -2,23 +2,29 @@ package racingcar.view;
 
 import camp.nextstep.edu.missionutils.Console;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class InputView {
 
+    private static final String INPUT_CAR_NAMES_MESSAGE = "경주할 자동차 이름을 입력하세요.(이름은 쉼표(,) 기준으로 구분)";
+    private static final String INPUT_TRY_COUNT_MESSAGE = "시도할 회수는 몇회인가요?";
+    private static final String ERROR_NOT_NUMBER = "[ERROR] 시도 횟수는 숫자여야 합니다.";
+
+    private static final String DELIMITER = ",";
+
     public List<String> readCarNames() {
-        System.out.println("경주할 자동차 이름을 입력하세요.(이름은 쉼표(,) 기준으로 구분)");
+        System.out.println(INPUT_CAR_NAMES_MESSAGE);
         String input = Console.readLine();
-
-        String[] names = input.split(",");
-
-        return List.of(names);
+        return Arrays.asList(input.split(DELIMITER));
     }
 
     public int readTryCount() {
-        System.out.println("시도할 회수는 몇회인가요?");
-        String input = Console.readLine();
-
-        return Integer.parseInt(input);
+        System.out.println(INPUT_TRY_COUNT_MESSAGE);
+        try {
+            return Integer.parseInt(Console.readLine());
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException(ERROR_NOT_NUMBER);
+        }
     }
 }
